Created a front facing ui for better playability.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <div class="title"><h1>Rock Paper Scissors</h1></div>
+    <div class="container">
+        <div class="center">
+            <div class="container2">
+                <div class="rock"><input type="button1" value="rock"></input></div>
+                <div class="paper"><input type="button2" value="paper"></input></div>
+                <div class="scissors"><input type="button3" value="scissors"></input></div>
+            </div>
+        </div>
+    </div>
+    <div id="result" class="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
